added bash scripts

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -5,6 +5,7 @@ all:
 	ghc --make -O2 -rtsopts -fforce-recomp HSPOSIX.lhs
 	ghc --make -O2 gen.hs
 	ghc --make -O2 gen2.hs
+	ghc --make -O2 Timer.hs
 clean:
 	rm *.o *.hi
 	rm re2 DERIV TDFA HSPOSIX
