fixed a bug with combineRange added re2 test cass

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,5 +1,7 @@
 all:
-	g++ -I/usr/local/include/ -L/usr/local/lib/ re2.cpp -lre2 -pthread -o re2
+	g++ -I/usr/local/include/ -L/usr/local/lib/ re2_4p.cpp -lre2 -pthread -o re2_4p
+	g++ -I/usr/local/include/ -L/usr/local/lib/ re2_5p.cpp -lre2 -pthread -o re2_5p
+	g++ -I/usr/local/include/ -L/usr/local/lib/ re2_10p.cpp -lre2 -pthread -o re2_10p
 	ghc --make -O2 -rtsopts -fforce-recomp DERIV.lhs
 	ghc --make -O2 -rtsopts -fforce-recomp TDFA.lhs
 	ghc --make -O2 -rtsopts -fforce-recomp HSPOSIX.lhs
