--- a/regex-deriv.cabal
+++ b/regex-deriv.cabal
@@ -7,7 +7,7 @@ Author:                 Kenny Zhuo Ming Lu and Martin Sulzmann
 Maintainer:             luzhuomi@gmail.com, martin.sulzmann@gmail.com
 Stability:              Beta
 Homepage:               http://code.google.com/p/xhaskell-regex-deriv/
-Synopsis:               Replaces/Enhances Text.Regex. Implementing regular expression matching using Bzozoski's Deriviative
+Synopsis:               Replaces/Enhances Text.Regex. Implementing regular expression matching using Brzozowski's Deriviatives
 Description:            Regex algorithm implementation using derivatives. 
 Category:               Text
 Tested-With:            GHC
