--- a/regex-deriv.cabal
+++ b/regex-deriv.cabal
@@ -22,6 +22,7 @@ library
   Build-Depends:         base >= 4.0 && < 5.0, ghc-prim
   Exposed-Modules:       Text.Regex.Deriv.ByteString
                          Text.Regex.Deriv.ByteString.Posix
+                         Text.Regex.Deriv.ByteString.BitCode
                          Text.Regex.Deriv.Common 
                          Text.Regex.Deriv.Word
                          Text.Regex.Deriv.ExtPattern
