--- a/regex-deriv.cabal
+++ b/regex-deriv.cabal
@@ -17,12 +17,13 @@ Cabal-Version:          >= 1.2.3
 flag base4
 
 library 
-  Build-Depends:        regex-base >= 0.93.1, parsec, mtl, containers, bytestring, deepseq, hashable, hashtables
+  Build-Depends:        regex-base >= 0.93.1, parsec, mtl, containers, bytestring, deepseq, hashable, hashtables, bitstream, dequeue
   Build-Depends:	bitset, parallel
   Build-Depends:         base >= 4.0 && < 5.0, ghc-prim
   Exposed-Modules:       Text.Regex.Deriv.ByteString
                          Text.Regex.Deriv.ByteString.Posix
                          Text.Regex.Deriv.ByteString.BitCode
+                         Text.Regex.Deriv.ByteString.BitCodeDQ
                          Text.Regex.Deriv.Common 
                          Text.Regex.Deriv.Word
                          Text.Regex.Deriv.ExtPattern
